# issue-drf-stubs-response

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: reproduce.yml
api/: tests.py  views.py
minimal/: asgi.py  settings.py  urls.py  wsgi.py
